--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-server": "20.0.3",
     "@angular/router": "20.0.3",
     "@angular/ssr": "20.0.3",
+    "@mui/material": "^7.2.0",
     "express": "^4.18.2",
     "lmdb": "^3.4.0",
     "rxjs": "~7.8.0",
