--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@angular/core": "20.0.3",
     "@angular/forms": "20.0.3",
     "@angular/material": "20.0.3",
-    "@angular/platform-browser": "20.0.3",
+    "@angular/platform-browser": "^20.0.6",
     "@angular/platform-browser-dynamic": "20.0.3",
     "@angular/platform-server": "20.0.3",
     "@angular/router": "20.0.3",
@@ -25,6 +25,7 @@
     "@mui/material": "^7.2.0",
     "express": "^4.18.2",
     "lmdb": "^3.4.0",
+    "ngx-cookie-service-ssr": "^20.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.8.1",
     "uuid": "^11.1.0",
